# HPC-Logistic_Regression

./: HPC_Logistic_Regression.ipynb  README.md
Ficheros_cpp/: vector_costo.txt  y_hat_test.txt  y_hat_train.txt
LogisticProject/: CMakeLists.txt  main.cpp
LogisticProject/ClaseLogistica/: regressionlogistic.cpp  regressionlogistic.h
LogisticProject/Extraction/: extraction.cpp  extraction.h
